refactor(review): 重构审核任务创建逻辑并优化代码结构
- 添加了作者注释信息
- 将 Stream 的 collect(Collectors.toList()) 替换为 toList() 方法
- 优化了 URL 编码方法中的条件判断结构
- 重构了 createTask 方法，支持同来源任务的重复提交更新而非插入新记录
- 提取了标准关联、附件保存和外部触发的独立方法
- 改进了版本控制和状态重置逻辑